# SMAN

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-MinGW.cmd  build-unix.sh  example.conf
src/: connect.c  connect.h  main.c  version.h.in
